Some small updates - flyout text color being one

--- a/ShoppingList/AppShell.xaml
+++ b/ShoppingList/AppShell.xaml
@@ -9,6 +9,7 @@
     Shell.FlyoutBehavior="Flyout"
     FlyoutBackgroundColor="{DynamicResource Secondary}"
     Shell.TitleColor="{DynamicResource Accent}"
+    Shell.ForegroundColor="{DynamicResource Accent}"
     >
 
     <ShellContent
