--- a/ShoppingList/AppShell.xaml
+++ b/ShoppingList/AppShell.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:ShoppingList"
     xmlns:views="clr-namespace:ShoppingList"
+    xmlns:view="clr-namespace:ShoppingList.View"
     Shell.BackgroundColor="{DynamicResource Primary}"
     Shell.FlyoutBehavior="Flyout"
     FlyoutBackgroundColor="{DynamicResource Secondary}"
@@ -14,7 +15,7 @@
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate view:MainPage}"
         Route="MainPage" 
         />
 
@@ -23,11 +24,11 @@
                 >
         <ShellContent Title="My Archived Lists" 
                       Route="ArchivedListView"
-                      ContentTemplate="{DataTemplate views:ArchivedListView}"/>
+                      ContentTemplate="{DataTemplate view:ArchivedListView}"/>
 
         <ShellContent Title="Settings" 
                       Route="SettingsView"
-                      ContentTemplate="{DataTemplate views:SettingsView}"/>
+                      ContentTemplate="{DataTemplate view:SettingsView}"/>
         <!-- Had to remove Icon, it was causing issues on IOS, Settings page wouldn't route-->
 
     </FlyoutItem>
